SA: CLHSDB printmdo throws an exception with "java.lang.InternalError: missing reason for 22"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b137

      With clhsdb, the printmdo command throws an exception:

      hsdb> printmdo -a
      Exception in thread "main" java.lang.InternalError: missing reason for 22
              at sun.jvm.hotspot.oops.MethodData.initialize(jdk.hotspot.agent/MethodData.java:187)
              at sun.jvm.hotspot.oops.MethodData.access$000(jdk.hotspot.agent/MethodData.java:36)
              at sun.jvm.hotspot.oops.MethodData$1.update(jdk.hotspot.agent/MethodData.java:126)
              at sun.jvm.hotspot.runtime.VM.registerVMInitializedObserver(jdk.hotspot.agent/VM.java:449)
              at sun.jvm.hotspot.oops.MethodData.<clinit>(jdk.hotspot.agent/MethodData.java:124)
              at jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(java.base/Native Method)
              at jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(java.base/NativeConstructorAccessorImpl.java:62)
              at jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(java.base/DelegatingConstructorAccessorImpl.java:45)
              at java.lang.reflect.Constructor.newInstance(java.base/Constructor.java:453)
              at sun.jvm.hotspot.runtime.VMObjectFactory.newObject(jdk.hotspot.agent/VMObjectFactory.java:58)
              at sun.jvm.hotspot.oops.Method.getMethodData(jdk.hotspot.agent/Method.java:123)
              at sun.jvm.hotspot.CommandProcessor$18$1.visit(jdk.hotspot.agent/CommandProcessor.java:863)
              at sun.jvm.hotspot.memory.SystemDictionary$2.visit(jdk.hotspot.agent/SystemDictionary.java:179)
              at sun.jvm.hotspot.memory.Dictionary.classesDo(jdk.hotspot.agent/Dictionary.java:68)
              at sun.jvm.hotspot.memory.SystemDictionary.classesDo(jdk.hotspot.agent/SystemDictionary.java:190)
              at sun.jvm.hotspot.memory.SystemDictionary.allClassesDo(jdk.hotspot.agent/SystemDictionary.java:183)
              at sun.jvm.hotspot.CommandProcessor$18.doit(jdk.hotspot.agent/CommandProcessor.java:857)
              at sun.jvm.hotspot.CommandProcessor.executeCommand(jdk.hotspot.agent/CommandProcessor.java:1963)
              at sun.jvm.hotspot.CommandProcessor.executeCommand(jdk.hotspot.agent/CommandProcessor.java:1933)
              at sun.jvm.hotspot.CommandProcessor.run(jdk.hotspot.agent/CommandProcessor.java:1813)
              at sun.jvm.hotspot.CLHSDB.run(jdk.hotspot.agent/CLHSDB.java:99)
              at sun.jvm.hotspot.CLHSDB.main(jdk.hotspot.agent/CLHSDB.java:40)
              at sun.jvm.hotspot.SALauncher.runCLHSDB(jdk.hotspot.agent/SALauncher.java:172)
              at sun.jvm.hotspot.SALauncher.main(jdk.hotspot.agent/SALauncher.java:404)

            Assignee:
            Jini George (Inactive)
            Reporter:
            Jini George (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: