8163150: SA: CLHSDB printmdo throws an exception with "java.lang.InternalError: missing reason for 22"

Accounted for the new JVMCI related Deoptimization Reasons.

Reviewed-by: dsamersoff, sla